# verifiable-financial-extraction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/skills/dev/: SKILL.md
.claude/skills/eval/: SKILL.md
.claude/skills/ingest-filing/: SKILL.md
.claude/skills/new-migration/: SKILL.md
.claude/skills/verify-extraction/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py
alembic/versions/: 500af8f564f1_initial_schema_filings_sections_xbrl_.py
src/: config.py  main.py
src/api/routes/: health.py
src/db/: base.py  engine.py  session.py
src/db/models/: __init__.py  filing.py  landing.py  xbrl.py
src/ingestion/: facts.py  filings.py  landing.py
src/ingestion/edgar/: client.py  ingest.py  ratelimit.py  submissions.py
src/ingestion/xbrl/: company_facts.py  ingest.py
src/workers/: runner.py
tests/: conftest.py
tests/integration/: test_facts_upsert.py  test_filings_upsert.py  test_ingest.py  test_landing.py  test_xbrl_ingest.py
tests/unit/: test_company_facts.py  test_config.py  test_edgar_client.py  test_health.py  test_models_metadata.py  test_ratelimit.py  test_smoke.py  test_submissions.py
