[project]
name = "verifiable-financial-extraction"
version = "0.1.0"
description = "Evaluation-gated AI agent that extracts financial data from SEC filings and proves every number against XBRL ground truth before accepting it."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Agent + LLM
    "langgraph>=0.2.50",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-anthropic>=0.3",
    "anthropic>=0.40",
    "langsmith>=0.1.140",
    # DB / ORM / retrieval
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    # Ingestion
    "httpx>=0.27",
    # Observability
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-asyncpg>=0.50b0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    # Security
    "bandit>=1.8",
    "pip-audit>=2.7",
]

[tool.uv]
# Flat layout: `src/` is on the import path (no wrapper package to build/distribute),
# so uv manages the environment + deps without packaging this project itself.
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.bandit]
# SAST over application code only; tests legitimately use asserts.
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
