[project]
name = "verifiable-financial-extraction"
version = "0.1.0"
description = "Evaluation-gated AI agent that extracts financial data from SEC filings and proves every number against XBRL ground truth before accepting it."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    # API
    "fastapi>=0.138.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.14.2",
    # Agent + LLM
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-anthropic>=1.4.6",
    "anthropic>=0.111.0",
    "langsmith>=0.8.18",
    # DB / ORM / retrieval
    "sqlalchemy[asyncio]>=2.0.51",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    # Ingestion
    "httpx>=0.27",
    # Observability
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp>=1.29",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
    "opentelemetry-instrumentation-asyncpg>=0.50b0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "mypy>=1.13",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    # Security
    "bandit>=1.8",
    "pip-audit>=2.10.1",
]

[tool.uv]
# Flat layout: `src/` is on the import path (no wrapper package to build/distribute),
# so uv manages the environment + deps without packaging this project itself.
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
# Autogenerated migrations: keep verbatim, don't lint/format.
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Test assertions legitimately read landed files synchronously.
"tests/**" = ["ASYNC240"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
namespace_packages = true
explicit_package_bases = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.bandit]
# SAST over application code only; tests legitimately use asserts.
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
